@@ -17,10 +17,10 @@ public class MapperUtil {
     }
 
     public static <R, E> List<R> convertList(List<E> list, Function<E, R> converter) {
-        return list.stream().map(e -> converter.apply(e)).collect(Collectors.toList());
+        return list.stream().map(converter::apply).toList();
     }
 
     public static <R, E> Set<R> convertSet(Set<E> set, Function<E, R> converter) {
-        return set.stream().map(e -> converter.apply(e)).collect(Collectors.toSet());
+        return set.stream().map(converter::apply).collect(Collectors.toSet());
     }
 }
